fixed issue with margins on smaller screens

--- a/stylesheets/partials/features/_content-card.scss
+++ b/stylesheets/partials/features/_content-card.scss
@@ -60,11 +60,16 @@
 }
 
 @media screen and (max-width: 668px) {
+  .content-card-container {
+	  overflow: hidden;
+	  margin-left: -15px;
+	  margin-right: -15px;
+  }
   .content-card {
-	margin: 60px -30px 60px;
 	padding-left: 15px;
 	padding-right: 15px;
-    text-align: center;
+	text-align: center;
+	margin: 30px -15px;
   }
   .content-card-image,
   .content-card-icon {
