--- a/stylesheets/partials/features/_content.scss
+++ b/stylesheets/partials/features/_content.scss
@@ -1,3 +1,16 @@
+html,
+body {
+	margin: 0;
+	padding: 0;
+}
 .main-content {
-	padding: 60px 0;
+	padding-bottom: 60px;
+	padding-top: 60px;
+}
+
+@media screen and (max-width: $screen-sm) {
+	.main-content {
+		padding-bottom: 15px;
+		padding-top: 15px;
+	}
 }
